[package]
name = "ihex-visualize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
clap-num = "1.0.2"
crossterm = "0.27.0"
ihex = "3.0.0"
log = "0.4.20"
simple_logger = "4.2.0"
